--- a/style.css
+++ b/style.css
@@ -172,6 +172,7 @@ nav{
     flex-direction: column;
     width: 50%;
     padding-left: 20px;
+    padding-top:22px;
 }
 .featured-text-card span{
     background: var(--third-color);
